; ModuleID = '/home/carl/AnghaBench/openssl/apps/lib/extr_s_cb.c_set_keylog_file.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/lib/extr_s_cb.c_set_keylog_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bio_keylog = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [2 x i8] c"a\00", align 1
@bio_err = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"Error writing keylog file %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [50 x i8] c"# SSL/TLS secrets log file, generated by OpenSSL\0A\00", align 1
@keylog_callback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @set_keylog_file(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i32*, i32** @bio_keylog, align 8
  %7 = call i32 @BIO_free_all(i32* %6)
  store i32* null, i32** @bio_keylog, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load i8*, i8** %5, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %10, %2
  store i32 0, i32* %3, align 4
  br label %36

14:                                               ; preds = %10
  %15 = load i8*, i8** %5, align 8
  %16 = call i32* @BIO_new_file(i8* %15, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %16, i32** @bio_keylog, align 8
  %17 = load i32*, i32** @bio_keylog, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = load i32, i32* @bio_err, align 4
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @BIO_printf(i32 %20, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i8* %21)
  store i32 1, i32* %3, align 4
  br label %36

23:                                               ; preds = %14
  %24 = load i32*, i32** @bio_keylog, align 8
  %25 = call i64 @BIO_tell(i32* %24)
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %23
  %28 = load i32*, i32** @bio_keylog, align 8
  %29 = call i32 @BIO_puts(i32* %28, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.2, i64 0, i64 0))
  %30 = load i32*, i32** @bio_keylog, align 8
  %31 = call i32 @BIO_flush(i32* %30)
  br label %32

32:                                               ; preds = %27, %23
  %33 = load i32*, i32** %4, align 8
  %34 = load i32, i32* @keylog_callback, align 4
  %35 = call i32 @SSL_CTX_set_keylog_callback(i32* %33, i32 %34)
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %32, %19, %13
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @BIO_free_all(i32*) #1

declare dso_local i32* @BIO_new_file(i8*, i8*) #1

declare dso_local i32 @BIO_printf(i32, i8*, i8*) #1

declare dso_local i64 @BIO_tell(i32*) #1

declare dso_local i32 @BIO_puts(i32*, i8*) #1

declare dso_local i32 @BIO_flush(i32*) #1

declare dso_local i32 @SSL_CTX_set_keylog_callback(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
